# lecture_gpucomputing

./: .gitignore
2/: .gitignore  CMakeLists.txt  Makefile  ex2.sh  exercise2.md  measure_null_kernel_time.sh  pandoc.sh  plot_results.py  run_mem.sh  run_mem_nvidia.sh  run_wait.sh
2/result/: memory.txt  memory_nvidia.txt  memory_with_sync.csv  nullkernel_timings_out.txt  wait_out.txt
2/src/: bandwidthtest.cu  memory.cu  memoryWrapper.cpp  memoryWrapper.h  memory_modnvidia.cu  nullKernelAsync.cu  wait.cu
3/: CMakeLists.txt  Makefile  runner.py  runner.sh  todo.txt
3/d2dtest/: d2d.cu
3/inc/: chCommandLine.h  chTimer.hpp
3/results/: coalesced.csv  memcopy.csv  memcopy_and_coalesced.csv  offset.csv  result.csv  stride.csv  stride_offset.csv
3/src/: kernel.cu  main.cpp  memcopy_benchmark.cpp  memcopy_benchmark.h
3/writeup/: exercise3.md  generate_plots.py  pandoc.sh
4/: CMakeLists.txt  readme.txt  runner.py
4/inc/: dummy.cpp  errorHandling.h
4/results/: matrix_creek.csv  mmul_ryzen.csv  perf  results_ryzen.csv  s2g.csv  shared_mem_block.csv  shared_mem_registers.csv  shared_mem_throughput.csv
4/src/: kernel.cu  kernel.cuh  main.cpp  shared_mem_basic.cpp  shared_mem_conflicts.cpp
4/src/matrix/: benchmark.cpp  matrix.h
4/src/shared_mem/: kernel.cu  main.cpp
4/src/shared_mem_alt/: kernel.cuh  reorder.cu  shared_mem_conflicts.cpp
4/writeup/: ex4.md  generate_plots.py  head.tex  pandoc.sh
4_niklas/: Makefile  runner.py
4_niklas/inc/: chCommandLine.h
4_niklas/results/: .~lock.s2r_c.csv#  g2s.csv  g2s_1b.csv  generate_plots.py  r2s.csv  s2g_1b.csv  s2r.csv  s2r_c.csv
4_niklas/results/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
4_niklas/src/: kernel.cu  main.cpp
5/: CMakeLists.txt
5/matrix/: errorHandling.h  matrix.cpp  matrix.h  matrix_cuda.cu  matrix_cuda.cuh  matrix_cuda.h  memoryWrapper.cu  memoryWrapper.cuh
5/result/: mmul.csv
5/results/: mmul_cuda.csv  mmul_double.csv  mmul_ryzen.csv  mmul_ryzen_6.csv  result_mmul_cuda.csv
5/runner/: benchmark.cpp  benchmark_double.cpp  run.sh  runall.sh
5/src/: main.cpp  mmult_cpu.c
5/test/: benchmark.cpp  matrix_test.cpp
5/writeup/: .gitignore  generate_plots.py  main.tex  matrix.tex  paper.tex
6/: CMakeLists.txt
6/CPU/: GSR.cpp
6/reduction/: memoryWrapper.cu  memoryWrapper.cuh  reduction.cpp  reduction.cu  reduction.cuh  reduction_naive.cu  reduction_optimized.cu  reduction_shared.cu  tracing.cpp  tracing.h
6/reduction/include/: optimization_ideas.txt  reduction.h  tracing.h
6/reduction_benchmark/: benchmark.cpp
6/reduction_test/: cuda_naive.cpp  main.cpp  test_cpu.cpp  test_cuda.cpp  test_trace.cpp
6/result/: analyze.py  result_final.csv  result_no_optim.csv  total.csv
6/writeup/: main.tex  paper.tex
7/: CMakeLists.txt
7/inc/: errorHandling.cuh  nbody.h  utility.cuh
7/results/: generate_plots.py  preliminary.csv
7/src/: benchmark.cpp  nbody.cu  nbody_naive.cu  nbody_shared.cu  nbody_template.cu  nbody_thrust.cu  test.cpp
7/writeup/: .gitignore  main.tex
